force-app/main/default/objects/Energy_Usage_Update__c/Energy_Usage_Update__c.object-meta.xml
<CustomObject>
    <description>Energy_Usage_Update__c</description>
    <label>Production Update</label>
    <nameField>
        <label>Energy Update</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>