force-app/main/default/objects/Energy_Usage_Update__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <inlineHelpText>Manual Entry, used to summarize adjustments made during this bill period</inlineHelpText>
    <label>Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>