force-app/main/default/objects/Energy_Usage_Update__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <label>xxBill Date</label>
    <type>Date</type>
</CustomField>