force-app/main/default/objects/Energy_Usage_Update__c/fields/Bill_Status__c.field-meta.xml
<CustomField>
    <fullName>Bill_Status__c</fullName>
    <label>Bill Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Host Account Bill Uploaded</fullName>
                
                
                    <label>Host Account Bill Uploaded</label>
                
                </value>
            
                <value>
                
                    <fullName>Host Account Bill QCed</fullName>
                
                
                    <label>Host Account Bill QCed</label>
                
                </value>
            
                <value>
                
                    <fullName>Credit Transfers QCed</fullName>
                
                
                    <label>Credit Transfers QCed</label>
                
                </value>
            
                <value>
                
                    <fullName>Ready to Generate</fullName>
                
                
                    <label>Ready to Generate</label>
                
                </value>
            
                <value>
                
                    <fullName>Bills QCed</fullName>
                
                
                    <label>Bills QCed</label>
                
                </value>
            
                <value>
                
                    <fullName>Email Bills Sent</fullName>
                
                
                    <label>Email Bills Sent</label>
                
                </value>
            
                <value>
                
                    <fullName>Letter Bills Sent</fullName>
                
                
                    <label>Letter Bills Sent</label>
                
                </value>
            
                <value>
                
                    <fullName>Autopay QCed</fullName>
                
                
                    <label>Autopay QCed</label>
                
                </value>
            
                <value>
                
                    <fullName>Not Billing this Month</fullName>
                
                
                    <label>Not Billing this Month</label>
                
                </value>
            
                <value>
                
                    <fullName>New Production Update</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>New Production Update</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>