force-app/main/default/objects/Energy_Usage_Update__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <formula>TEXT(Shared_Solar_System__r.Billing_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Method</label>
    <type>Text</type>
</CustomField>