force-app/main/default/objects/Energy_Usage_Update__c/fields/Calculated_Net_Metering_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Net_Metering_Rate__c</fullName>
    <formula>Total_System_NMCs__c / Production__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Net Metering Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>