force-app/main/default/objects/Energy_Usage_Update__c/fields/Comments_About_Host_Account_Bill__c.field-meta.xml
<CustomField>
    <fullName>Comments_About_Host_Account_Bill__c</fullName>
    <label>Comments About Host Account Bill</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>