force-app/main/default/objects/Energy_Usage_Update__c/fields/Count_of_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Transfers__c</fullName>
    <formula>IF(Total_System_NMCs__c &gt; 0, 1, 0) + 
IF(Total_System_NMCs_2_of_4__c &gt; 0, 1, 0) + 
IF(Total_System_NMCs_3_of_4__c &gt; 0, 1, 0) + 
IF(Total_System_NMCs_4_of_4__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rolls up to SSS field. Increases by every non zero transfer (ie, multiple transfers count as &gt;1 and $0 transfers don&apos;t count)</inlineHelpText>
    <label>Count of Transfers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>