force-app/main/default/objects/Energy_Usage_Update__c/fields/Credits_on_Bill_Period__c.field-meta.xml
<CustomField>
    <fullName>Credits_on_Bill_Period__c</fullName>
    <formula>CASE( 
MONTH(Billing_Period_Start_Date__c), 
1, &quot;February&quot;, 
2, &quot;March&quot;, 
3, &quot;April&quot;, 
4, &quot;May&quot;, 
5, &quot;June&quot;, 
6, &quot;July&quot;, 
7, &quot;August&quot;, 
8, &quot;September&quot;, 
9, &quot;October&quot;, 
10, &quot;November&quot;, 
11, &quot;December&quot;, 
&quot;January&quot; 
)&amp;&quot; - &quot;&amp; 
CASE( 
MONTH(Billing_Period_End_Date__c), 
1, &quot;February&quot;, 
2, &quot;March&quot;, 
3, &quot;April&quot;, 
4, &quot;May&quot;, 
5, &quot;June&quot;, 
6, &quot;July&quot;, 
7, &quot;August&quot;, 
8, &quot;September&quot;, 
9, &quot;October&quot;, 
10, &quot;November&quot;, 
11, &quot;December&quot;, 
&quot;January&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits on Bill Period</label>
    <type>Text</type>
</CustomField>