force-app/main/default/objects/Energy_Usage_Update__c/fields/Date_Credit_Transfers_QCed__c.field-meta.xml
<CustomField>
    <fullName>Date_Credit_Transfers_QCed__c</fullName>
    <inlineHelpText>Bill Status change stamps this date</inlineHelpText>
    <label>Date: Credit Transfers QCed</label>
    <type>Date</type>
</CustomField>