force-app/main/default/objects/Energy_Usage_Update__c/fields/Date_Email_Bills_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Bills_Sent__c</fullName>
    <inlineHelpText>Bill Status change stamps this date</inlineHelpText>
    <label>Date: Email Bills Sent</label>
    <type>Date</type>
</CustomField>