force-app/main/default/objects/Energy_Usage_Update__c/fields/Date_Host_Account_Bill_QCed__c.field-meta.xml
<CustomField>
    <fullName>Date_Host_Account_Bill_QCed__c</fullName>
    <inlineHelpText>Bill Status change stamps this date</inlineHelpText>
    <label>Date: Host Account Bill QCed</label>
    <type>Date</type>
</CustomField>