force-app/main/default/objects/Energy_Usage_Update__c/fields/Date_Host_Bill_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Host_Bill_Uploaded__c</fullName>
    <inlineHelpText>Bill Status change stamps this date</inlineHelpText>
    <label>Date: Host Bill Uploaded</label>
    <type>Date</type>
</CustomField>