force-app/main/default/objects/Energy_Usage_Update__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>xx Due Date</label>
    <type>Date</type>
</CustomField>