force-app/main/default/objects/Energy_Usage_Update__c/fields/Due_Date_Bills_QCed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Bills_QCed__c</fullName>
    <formula>Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date: Bills QCed</label>
    <type>Date</type>
</CustomField>