force-app/main/default/objects/Energy_Usage_Update__c/fields/Due_Date_Email_Bills_Sent__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Email_Bills_Sent__c</fullName>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date: Email Bills Sent</label>
    <type>Date</type>
</CustomField>