force-app/main/default/objects/Energy_Usage_Update__c/fields/Due_Date_Host_Bill_QCed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Host_Bill_QCed__c</fullName>
    <formula>Date__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date: Host Bill QCed</label>
    <type>Date</type>
</CustomField>