force-app/main/default/objects/Energy_Usage_Update__c/fields/Generate_Bills__c.field-meta.xml
<CustomField>
    <fullName>Generate_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bills Generated</label>
    <type>Checkbox</type>
</CustomField>