force-app/main/default/objects/Energy_Usage_Update__c/fields/Host_Account_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Host_Account_Bill_Number__c</fullName>
    <formula>Shared_Solar_System__r.Host_Utility_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Account Bill Number</label>
    <type>Text</type>
</CustomField>