force-app/main/default/objects/Energy_Usage_Update__c/fields/Lost_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lost_Customer_Revenue__c</fullName>
    <label>Revenue Management - Used Emergency Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>