force-app/main/default/objects/Energy_Usage_Update__c/fields/Net_Metering_Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Rate_Applied__c</fullName>
    <label>Net Metering Rate Applied</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>