force-app/main/default/objects/Energy_Usage_Update__c/fields/Notes_about_Bill_Process__c.field-meta.xml
<CustomField>
    <fullName>Notes_about_Bill_Process__c</fullName>
    <label>Notes about Bill Process:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>