force-app/main/default/objects/Energy_Usage_Update__c/fields/Product_LIne__c.field-meta.xml
<CustomField>
    <fullName>Product_LIne__c</fullName>
    <label>Product LIne</label>
    <length>25</length>
    <type>Text</type>
</CustomField>