force-app/main/default/objects/Energy_Usage_Update__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production (kWh)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>