force-app/main/default/objects/Energy_Usage_Update__c/fields/Production_kWh_2_of_4__c.field-meta.xml
<CustomField>
    <fullName>Production_kWh_2_of_4__c</fullName>
    <label>Production kWh (2 of 4)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>