force-app/main/default/objects/Energy_Usage_Update__c/fields/Revenue_Minus_10_Discount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Minus_10_Discount__c</fullName>
    <formula>Schedule_Z_Allocations__c *0.90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Minus 10% Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>