force-app/main/default/objects/Energy_Usage_Update__c/fields/Schedule_Z__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation Schedule</label>
    <referenceTo>Schedule_Z__c</referenceTo>
    <relationshipLabel>Production Updates</relationshipLabel>
    <relationshipName>Production_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>