force-app/main/default/objects/Energy_Usage_Update__c/fields/Schedule_Z_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z_Allocations__c</fullName>
    <label>Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>