force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <formula>Total_System_NMCs__c +  Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is for reporting purposes only, it sums the Total System NMCs (what is actually used to generate bills) and adjustments</inlineHelpText>
    <label>Total Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>