force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_NMCs_4_of_4__c.field-meta.xml
<CustomField>
    <fullName>Total_NMCs_4_of_4__c</fullName>
    <formula>Utility_Bill_Line_Total_4__c +  Total_System_NMCs_4_of_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NMCs Available for Allocation  (4 of 4) + Utility Bill Line Total (4 of 4)</inlineHelpText>
    <label>Total NMCs (4 of 4)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>