force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Total_NMCs__c</fullName>
    <formula>Total_System_NMCs__c +  Utility_Bill_Line_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NMCs Available for Allocation + Utility Bill Line Total</inlineHelpText>
    <label>Total NMCs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>