force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_NMCs_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_NMCs_Generated__c</fullName>
    <label>Total NMCs Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>