force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_System_NMCs_4_of_4__c.field-meta.xml
<CustomField>
    <fullName>Total_System_NMCs_4_of_4__c</fullName>
    <inlineHelpText>Total credits produced as reported by the utility, including unsubscribed and subscribed credits for 4 of 4</inlineHelpText>
    <label>NMCs Available for Allocation (4 of 4)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>