force-app/main/default/objects/Energy_Usage_Update__c/fields/Total_System_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Total_System_NMCs__c</fullName>
    <inlineHelpText>Total credits produced as reported by the utility, including unsubscribed and subscribed credits</inlineHelpText>
    <label>NMCs Available for Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>