force-app/main/default/objects/Energy_Usage_Update__c/fields/Transfer_Credits__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Credits__c</fullName>
    <description>Total transfers of the host account during this billing cycle. This field should be +/- 2-3% of last month&apos;s Total NMC</description>
    <inlineHelpText>Total transfers of the host account during this billing cycle. This field should be +/- 2-3% of last month&apos;s Total NMC</inlineHelpText>
    <label>Transfer off Host Account Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>