force-app/main/default/objects/Energy_Usage_Update__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <formula>Shared_Solar_System__r.System_Utility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility</label>
    <type>Text</type>
</CustomField>