force-app/main/default/objects/Energy_Usage_Update__c/fields/Utility_Account__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account__c</fullName>
    <formula>Shared_Solar_System__r.Host_Utility_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Account #</label>
    <type>Text</type>
</CustomField>