force-app/main/default/objects/Energy_Usage_Update__c/fields/Utility_Bill_Line_Total_3__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_Line_Total_3__c</fullName>
    <inlineHelpText>Group 3&apos;s Utility Bill Line Total</inlineHelpText>
    <label>Fees &amp; Credits Total (3 of 4)</label>
    <summarizedField>Utility_Bill_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Utility_Bill_Line_Item__c.Group__c</field>
        
            <operation>equals</operation>
        
            <value>3</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>Utility_Bill_Line_Item__c.Category__c</field>
        
            <operation>equals</operation>
        
            <value>Fees &amp; Credits</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Utility_Bill_Line_Item__c.Production_Update__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>