force-app/main/default/objects/Energy_Usage_Update__c/fields/YearDate__c.field-meta.xml
<CustomField>
    <fullName>YearDate__c</fullName>
    <formula>text(year(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>