force-app/main/default/objects/Energy_Usage_Update__c/recordTypes/Production_Update_CS.recordType-meta.xml
<RecordType>
    <fullName>Production_Update_CS</fullName>
    <active>true</active>
    <label>Production Update - CS</label>
</RecordType>