force-app/main/default/objects/Energy_Usage_Update__c/recordTypes/Production_Update_RL.recordType-meta.xml
<RecordType>
    <fullName>Production_Update_RL</fullName>
    <active>true</active>
    <label>Production Update - RL</label>
</RecordType>