force-app/main/default/objects/Energy_Usage_Update__c/validationRules/Require_Entity_to_Create_Prod_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Entity_to_Create_Prod_update</fullName>
    <active>true</active>
    <description>A SSS must have an associated entity to create a production update</description>
    <errorConditionFormula>IsBlank(Shared_Solar_System__r.BWC_Project_Entity_Manual__c)</errorConditionFormula>
    <errorMessage>A SSS must have an associated entity to create a production update</errorMessage>
</ValidationRule>