force-app/main/default/objects/Energy_Usage_Update__c/validationRules/Required_Fields_Transfer_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Transfer_2</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Total_System_NMCs_2_of_4__c)),
ISBLANK(Production_kWh_2_of_4__c),
ISBLANK(Net_Metering_Rate_Applied_2_of_4__c)
),true,false)</errorConditionFormula>
    <errorMessage>Error: You must fill out Production, Net Metering Rate Applied and Total System NMCs if you want to add another month of credits.</errorMessage>
</ValidationRule>