force-app/main/default/objects/Energy_Usage_Update__c/validationRules/Unable_to_Edit_After_Credits_QCed.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_Edit_After_Credits_QCed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISBLANK( Date_Credit_Transfers_QCed__c )=false, 
OR( 
ISCHANGED(Adjustments__c ), 
ISCHANGED(Net_Metering_Rate_Applied__c), 
ISCHANGED(Production__c ), 
ISCHANGED(Total_NMCs_Generated__c )))</errorConditionFormula>
    <errorMessage>You cannot edit certain Production Update fields after the transfer credits have been QCed. Please contact BizOps for questions on this.</errorMessage>
</ValidationRule>