force-app/main/default/objects/Energy_Usage_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_NMCs_Generated__c</columns>
    <columns>Total_System_NMCs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>